// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Component
      amount={44.35}
      createdAt={0}
      description="Rent"
      id="1"
      key="1"
      note=""
    />
    <Component
      amount={104.35}
      createdAt={-345600000}
      description="dinner"
      id="2"
      key="2"
      note=""
    />
    <Component
      amount={141.35}
      createdAt={345600000}
      description="Coffee and dinner"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
